<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:gravity="center"-->
    <!--        android:orientation="vertical">-->

    <ImageView
        android:id="@+id/game_logo"
        android:layout_width="200dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/game_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/game_logo"
        app:layout_constraintStart_toStartOf="@+id/game_logo"
        app:layout_constraintTop_toBottomOf="@+id/game_logo" />


    <TextView
        android:id="@+id/game_viewers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_viewers"
        app:layout_constraintStart_toStartOf="@+id/game_logo"
        app:layout_constraintTop_toBottomOf="@id/game_name" />

    <TextView
        android:id="@+id/game_channels"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:text="@string/game_channels"
        app:layout_constraintEnd_toEndOf="@+id/game_logo"
        app:layout_constraintTop_toBottomOf="@id/game_name" />


    <!--    </LinearLayout>-->
</androidx.constraintlayout.widget.ConstraintLayout>